--- a/src/components/__common__/_color.scss
+++ b/src/components/__common__/_color.scss
@@ -128,3 +128,231 @@ $yq-lime-7: #7cb305;
 $yq-lime-8: #5b8c00;
 $yq-lime-9: #3f6600;
 $yq-lime-10: #254000;
+$yq-color-text: rgba(0, 0, 0, 0.88);
+$yq-color-text-secondary: rgba(0, 0, 0, 0.65);
+$yq-color-text-tertiary: rgba(0, 0, 0, 0.45);
+$yq-color-text-quaternary: rgba(0, 0, 0, 0.25);
+$yq-color-fill: rgba(0, 0, 0, 0.15);
+$yq-color-fill-secondary: rgba(0, 0, 0, 0.06);
+$yq-color-fill-tertiary: rgba(0, 0, 0, 0.04);
+$yq-color-fill-quaternary: rgba(0, 0, 0, 0.02);
+$yq-color-bg-layout: #f5f5f5;
+$yq-color-bg-container: #ffffff;
+$yq-color-bg-elevated: #ffffff;
+$yq-color-bg-spotlight: rgba(0, 0, 0, 0.85);
+$yq-color-bg-blur: transparent;
+$yq-color-border: #d9d9d9;
+$yq-color-border-secondary: #f0f0f0;
+$yq-color-primary-bg: #e6f4ff;
+$yq-color-primary-bg-hover: #bae0ff;
+$yq-color-primary-border: #91caff;
+$yq-color-primary-border-hover: #69b1ff;
+$yq-color-primary-hover: #4096ff;
+$yq-color-primary-active: #0958d9;
+$yq-color-primary-text-hover: #4096ff;
+$yq-color-primary-text: #1677ff;
+$yq-color-primary-text-active: #0958d9;
+$yq-color-success-bg: #f6ffed;
+$yq-color-success-bg-hover: #d9f7be;
+$yq-color-success-border: #b7eb8f;
+$yq-color-success-border-hover: #95de64;
+$yq-color-success-hover: #95de64;
+$yq-color-success-active: #389e0d;
+$yq-color-success-text-hover: #73d13d;
+$yq-color-success-text: #52c41a;
+$yq-color-success-text-active: #389e0d;
+$yq-color-error-bg: #fff2f0;
+$yq-color-error-bg-hover: #fff1f0;
+$yq-color-error-border: #ffccc7;
+$yq-color-error-border-hover: #ffa39e;
+$yq-color-error-hover: #ff7875;
+$yq-color-error-active: #d9363e;
+$yq-color-error-text-hover: #ff7875;
+$yq-color-error-text: #ff4d4f;
+$yq-color-error-text-active: #d9363e;
+$yq-color-warning-bg: #fffbe6;
+$yq-color-warning-bg-hover: #fff1b8;
+$yq-color-warning-border: #ffe58f;
+$yq-color-warning-border-hover: #ffd666;
+$yq-color-warning-hover: #ffd666;
+$yq-color-warning-active: #d48806;
+$yq-color-warning-text-hover: #ffc53d;
+$yq-color-warning-text: #faad14;
+$yq-color-warning-text-active: #d48806;
+$yq-color-info-bg: #e6f4ff;
+$yq-color-info-bg-hover: #bae0ff;
+$yq-color-info-border: #91caff;
+$yq-color-info-border-hover: #69b1ff;
+$yq-color-info-hover: #69b1ff;
+$yq-color-info-active: #0958d9;
+$yq-color-info-text-hover: #4096ff;
+$yq-color-info-text: #1677ff;
+$yq-color-info-text-active: #0958d9;
+$yq-color-link-hover: #69b1ff;
+$yq-color-link-active: #0958d9;
+$yq-color-bg-mask: rgba(0, 0, 0, 0.45);
+
+$colorList: (
+  blue-1: #e6f4ff,
+  blue-2: #bae0ff,
+  blue-3: #91caff,
+  blue-4: #69b1ff,
+  blue-5: #4096ff,
+  blue-6: #1677ff,
+  blue-7: #0958d9,
+  blue-8: #003eb3,
+  blue-9: #002c8c,
+  blue-10: #001d66,
+  purple-1: #f9f0ff,
+  purple-2: #efdbff,
+  purple-3: #d3adf7,
+  purple-4: #b37feb,
+  purple-5: #9254de,
+  purple-6: #722ed1,
+  purple-7: #531dab,
+  purple-8: #391085,
+  purple-9: #22075e,
+  purple-10: #120338,
+  cyan-1: #e6fffb,
+  cyan-2: #b5f5ec,
+  cyan-3: #87e8de,
+  cyan-4: #5cdbd3,
+  cyan-5: #36cfc9,
+  cyan-6: #13c2c2,
+  cyan-7: #08979c,
+  cyan-8: #006d75,
+  cyan-9: #00474f,
+  cyan-10: #002329,
+  green-1: #f6ffed,
+  green-2: #d9f7be,
+  green-3: #b7eb8f,
+  green-4: #95de64,
+  green-5: #73d13d,
+  green-6: #52c41a,
+  green-7: #389e0d,
+  green-8: #237804,
+  green-9: #135200,
+  green-10: #092b00,
+  magenta-1: #fff0f6,
+  magenta-2: #ffd6e7,
+  magenta-3: #ffadd2,
+  magenta-4: #ff85c0,
+  magenta-5: #f759ab,
+  magenta-6: #eb2f96,
+  magenta-7: #c41d7f,
+  magenta-8: #9e1068,
+  magenta-9: #780650,
+  magenta-10: #520339,
+  pink-1: #fff0f6,
+  pink-2: #ffd6e7,
+  pink-3: #ffadd2,
+  pink-4: #ff85c0,
+  pink-5: #f759ab,
+  pink-6: #eb2f96,
+  pink-7: #c41d7f,
+  pink-8: #9e1068,
+  pink-9: #780650,
+  pink-10: #520339,
+  red-1: #fff1f0,
+  red-2: #ffccc7,
+  red-3: #ffa39e,
+  red-4: #ff7875,
+  red-5: #ff4d4f,
+  red-6: #f5222d,
+  red-7: #cf1322,
+  red-8: #a8071a,
+  red-9: #820014,
+  red-10: #5c0011,
+  orange-1: #fff7e6,
+  orange-2: #ffe7ba,
+  orange-3: #ffd591,
+  orange-4: #ffc069,
+  orange-5: #ffa940,
+  orange-6: #fa8c16,
+  orange-7: #d46b08,
+  orange-8: #ad4e00,
+  orange-9: #873800,
+  orange-10: #612500,
+  yellow-1: #feffe6,
+  yellow-2: #ffffb8,
+  yellow-3: #fffb8f,
+  yellow-4: #fff566,
+  yellow-5: #ffec3d,
+  yellow-6: #fadb14,
+  yellow-7: #d4b106,
+  yellow-8: #ad8b00,
+  yellow-9: #876800,
+  yellow-10: #614700,
+  volcano-1: #fff2e8,
+  volcano-2: #ffd8bf,
+  volcano-3: #ffbb96,
+  volcano-4: #ff9c6e,
+  volcano-5: #ff7a45,
+  volcano-6: #fa541c,
+  volcano-7: #d4380d,
+  volcano-8: #ad2102,
+  volcano-9: #871400,
+  volcano-10: #610b00,
+  geekblue-1: #f0f5ff,
+  geekblue-2: #d6e4ff,
+  geekblue-3: #adc6ff,
+  geekblue-4: #85a5ff,
+  geekblue-5: #597ef7,
+  geekblue-6: #2f54eb,
+  geekblue-7: #1d39c4,
+  geekblue-8: #10239e,
+  geekblue-9: #061178,
+  geekblue-10: #030852,
+  gold-1: #fffbe6,
+  gold-2: #fff1b8,
+  gold-3: #ffe58f,
+  gold-4: #ffd666,
+  gold-5: #ffc53d,
+  gold-6: #faad14,
+  gold-7: #d48806,
+  gold-8: #ad6800,
+  gold-9: #874d00,
+  gold-10: #613400,
+  lime-1: #fcffe6,
+  lime-2: #f4ffb8,
+  lime-3: #eaff8f,
+  lime-4: #d3f261,
+  lime-5: #bae637,
+  lime-6: #a0d911,
+  lime-7: #7cb305,
+  lime-8: #5b8c00,
+  lime-9: #3f6600,
+  lime-10: #254000,
+  success-1: #f6ffed,
+  success-3: #b7eb8f,
+  success-7: #52c41a,
+  warning-1: #fffbe6,
+  warning-3: #ffe58f,
+  warning-7: #faad14,
+  error-1: #fff2f0,
+  error-3: #ffccc7,
+  error-7: #ff4d4f,
+  info-1: #e6f4ff,
+  info-3: #91caff,
+  info-7: #1677ff,
+);
+
+$colors: (
+  color1: blue,
+  color2: red,
+  color3: green,
+  color4: purple,
+  color5: cyan,
+  color6: magenta,
+  color7: pink,
+  color8: orange,
+  color9: yellow,
+  color10: volcano,
+  color11: geekblue,
+  color12: lime,
+  color13: gold,
+  color14: success,
+  color15: warning,
+  color16: error,
+  color17: info,
+);
