--- a/src/components/tag/Tag.scss
+++ b/src/components/tag/Tag.scss
@@ -1,4 +1,4 @@
-@import "../__common__/color";
+@import "../__common__/scss/color";
 
 $yq-tag-default-bg: #fafafa;
 $yq-tag-default-color: rgba(0, 0, 0, 0.88);
