--- a/src/components/tabs/Tabs.scss
+++ b/src/components/tabs/Tabs.scss
@@ -1,5 +1,5 @@
-@import "../__common__/base";
-@import "../__common__/color";
+@import "../__common__/scss/base";
+@import "../__common__/scss/color";
 
 .yq-tabs {
   position: relative;
